fix: 500 에러 및 에러메세지 설정 가능하도록 함